--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="container-fluid px-0">
         <div class="row align-items-center">
             <div class="col-lg-6">
-                <div id="headingGroup" class="text-white text-center my-5">
+                <div id="headingGroup" class="text-white text-center my-5 py-5">
                     <h1>JAMES<span>/</span>LEE</h1>
                     <h1>iOS<span>/</span>DEVELOPER</h1>
                     <h1>WEB<span>/</span>DEVELOPER</h1>
